[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "flake8-unused-fstrings"
version = "1.0.1"
description = "Flake8 plugin to catch f-strings with no fields."
readme = "README.rst"
keywords = []
dynamic = [ "requires-python", "classifiers", "dependencies",]

[project.license]
file = "LICENSE"

[[project.authors]]
name = "adam hitchcock"
email = "adam+python@northisup.com"

[project.urls]
Homepage = "https://github.com/python-formate/flake8-unused-fstrings"
"Issue Tracker" = "https://github.com/python-formate/flake8-unused-fstrings/issues"
"Source Code" = "https://github.com/python-formate/flake8-unused-fstrings"

[project.entry-points."flake8.extension"]
NUF = "flake8_unused_fstrings:Plugin"

[tool.setuptools]
zip-safe = false
include-package-data = true
platforms = [ "Windows", "macOS", "Linux",]

[tool.whey]
base-classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Flake8",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Natural Language :: English",
    "Typing :: Typed",
]
python-versions = [ "3.8", "3.9", "3.10", "3.11", "3.12", "3.13",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "ISCL"
package = "flake8_unused_fstrings"

[tool.mypy]
python_version = "3.9"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true

[tool.dependency-dash."requirements.txt"]
order = 10

[tool.dependency-dash."tests/requirements.txt"]
order = 20
include = false

[tool.snippet-fmt]
directives = [ "code-block",]

[tool.snippet-fmt.languages.python]
reformat = true

[tool.snippet-fmt.languages.TOML]
reformat = true

[tool.snippet-fmt.languages.ini]

[tool.snippet-fmt.languages.json]
